--- a/NotrrioEngine/NotrrioEngine.vcxproj
+++ b/NotrrioEngine/NotrrioEngine.vcxproj
@@ -128,6 +128,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Notrrio\Server.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Notrrio\Server.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
